[package]
name = "java-runtimes"
version = "0.2.0"
authors = ["Leawind <leawind@yeah.net>"]
edition = "2021"
description = "A library to detect java runtimes in current system."
readme = "README.md"
repository = "https://github.com/Leawind/java-runtimes"
license-file = "LICENSE.txt"

[dependencies]
regex = "1.11.0"
semver = "1.0.23"
walkdir = "2.5.0"
serde = { version = "1.0.210", features = ["derive"] }
