[package]
name = "java-runtimes"
version = "0.3.0"
authors = ["Leawind <leawind@yeah.net>"]
edition = "2021"
description = "A library for detecting java runtimes in current system."
readme = "README.md"
repository = "https://github.com/Leawind/java-runtimes"
license-file = "LICENSE.txt"

[dependencies]
regex = "1.11.0"
walkdir = "2.5.0"
serde = { version = "1.0.210", features = ["derive"] }
